UI/public/css/styles.css
@import url(https://fonts.googleapis.com/css?family=Raleway);

* {
  padding: 0;
  margin: 0;
  font-size: 100%;
  box-sizing: border-box;
  font-family: 'Raleway';
  font-size: 16px;
}

.blue {
  color: blue;
}

.green {
  color: green;
}

.red {
  color: red;
}

html,
body {
  margin: 0;
  height: 100%;
}

body {
  line-height: 1.4;
}

img {
  max-width: 100%;
  height: auto;
}

a {
  text-decoration: none !important;
}

li {
  list-style-type: none;
}

h2 {
  margin: 0;
}

label {
  margin-bottom: 0;
}

table thead {
  background-color:#004689;
  color: #fff;
}

tr {
  line-height: 28px;
}

th {
  font-size: 1.15rem;
}

.container {
  padding: 0;
}

input,
select {
  height: 40px;
  width: auto;
  margin-bottom: 5px;
  min-width: 300px;
  max-width: 400px;
  padding: 0 5px;
}

input[type="submit"] {
  background-color: #004689;
  color: #ffffff;
  border-radius: 5px;
}

fieldset {
  border: 1px solid #c0c0c0;
}

.errors {
  color: #ff0000;
}

#store_logo,
.logo {
  vertical-align: middle;
  color: white;
  font-size: 1.35rem;
  margin: 0 !important;
  font-weight: 700;
}

.top-nav {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  background-color: #004689;
  border-bottom: 1px solid #e0e5eb;
  box-shadow: 0px 1px 8px #223055;
  color: #fff;
  padding: 18px;
}

.menu {
  display: flex;
  flex-direction: row;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.menu > li {
  margin: 0 1rem;
  overflow: hidden;
}

.menu-button-container {
  display: none;
  height: 100%;
  width: 30px;
  cursor: pointer;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#menu-toggle {
  display: none;
}

.menu-button,
.menu-button::before,
.menu-button::after {
  display: block;
  background-color: #fff;
  position: absolute;
  height: 4px;
  width: 30px;
  transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
  border-radius: 2px;
}

.menu-button::before {
  content: '';
  margin-top: -8px;
}

.menu-button::after {
  content: '';
  margin-top: 8px;
}

#menu-toggle:checked + .menu-button-container .menu-button::before {
  margin-top: 0px;
  transform: rotate(405deg);
}

#menu-toggle:checked + .menu-button-container .menu-button {
  background: rgba(255, 255, 255, 0);
}

#menu-toggle:checked + .menu-button-container .menu-button::after {
  margin-top: 0px;
  transform: rotate(-405deg);
}

.menu a {
  color: #ffff !important;
  font-size: 18px !important;
}

.menu a:hover {
  color: #ffff !important;
  font-weight: 600;
  text-decoration: underline !important;
}

.hero {
  color: #ffffff;
  font-size: 1.25rem;
  text-align: center;
  height: 50vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.admin_hero {
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url('../images/ems.jpg') no-repeat center center;
  background-size: cover;
}

.hero_header h1 {
  padding: 50px;
  background-color: rgba(0, 0, 0, 0.8);
  font-size: 2rem !important;
}

footer {
  background: #004689;
  color: #ffffff;
}

footer h1 {
  font-size: 1.25rem;
  font-weight: bold;
  margin-bottom: 20px;
}

footer hr {
  width: 70%;
  margin: auto;
  opacity: 0.5;
}

footer li {
  min-height: 32px;
}

footer > p {
  text-align: center;
  padding: 16px 0;
  margin-bottom: 0;
}

footer #members {
  padding: 8px 0;
}

footer #footer {
  display: grid;
  grid-template-rows: repeat(4, 0.35fr);
  justify-content: center;
  align-items: center;
  gap: 30px;
  padding: 30px 0;
}

footer a {
  text-decoration: none;
  color: #ffffff;
}

.social_media {
  margin-top: 24px;
}

#footer h5 {
  font-weight: 600;
  text-decoration: underline !important;
}

#footer ul {
  padding: 0;
}

.copyright {
  background-color: #ececec;
  color: #004689;
  font-weight: 600 !important;
}

.social_media div img {
  width: 40px;
  padding: 5px;
}

.company,
.quick_links,
.stay_in_touch {
  text-align: center;
}

.quick_links a:hover {
  color: white;
}

.recent_posts {
  padding: 8px;
}

.recent_posts h1 {
  text-align: center;
}

.recent_post {
  display: grid;
  grid-template-columns: 1fr 2fr;
  grid-template-rows: auto;
  gap: 10px;
  margin-bottom: 20px;
}

.recent_post img {
  max-width: 100px;
  justify-self: end;
}

.recent_post .description {
  grid-column: 2/3;
  grid-row: 1/2;
  font-weight: bold;
  font-size: 1.1rem;
  line-height: 1.25rem;
}

.recent_post .date_author {
  grid-column: 2/3;
  grid-row: 1/2;
  align-self: end;
  font-size: 0.7rem;
}

/* Filter Employee */
.filter-form-container {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 24px;
}

.filter-form {
  display: flex;
  gap: 24px;
}

/* Employees List */
#employee-list-container {
  padding: 48px 0;
  /* background-color: azure; */
  margin: auto;
  min-height: 75vh;
}

.search-form-container {
  display: flex;
  justify-content: center;
  text-align: center;
  align-items: center;
  gap: 36px;
  margin: 36px;
}

.no-records {
  text-align: center;
  font-size: 30px;
  font-weight: bold;
  padding: 24px 0 !important;
}

.employees-list {
  width: 100%;
  text-align: center;
  margin-top: 24px;
}

/* Add Employee */
#add-employee-container {
  margin: auto;
  padding: 48px 0;
  background-color: #efefefa0;
}

.section-header {
  text-align: center;
  font-weight: bold;
  font-size: 2.5rem;
  margin: 16px 0;
  text-transform: uppercase;
  color: #004689;
}

.add-employee-form {
  margin-top: 24px;
  display: grid;
  grid-template-columns: repeat(2, minmax(auto, 250px)) auto;
  grid-template-rows: auto;
  gap: 8px;
  justify-content: center;
  align-items: center;
}

.add-employee-form label {
  font-weight: bold;
}

.create-employee-btn,
.edit-employee-btn,
.delete-employee-btn {
  grid-column: 1/3;
  justify-self: center;
  color: white;
  margin-top: 24px;
  background-color:#004689 !important;
}

.edit-employee-btn {
  background-color: rgb(123, 70, 6);
}

.delete-employee-btn {
  background-color: #570202;
}

#go_to_top {
  display: none;
}

@media screen and (min-width: 768px) {
  .hero {
    height: 65vh;
  }

  footer hr {
    display: none;
  }

  footer #footer {
    max-width: 1200px;
    margin: auto;
    display: grid;
    grid-template-columns: 1.5fr 1.5fr 1.5fr 1.5fr;
    grid-template-rows: auto;
    justify-content: center;
    align-items: start;
    gap: 30px;
  }

  .recent_posts {
    padding: 0;
  }

  #go_to_top {
    display: none;
    position: fixed;
    bottom: 20px;
    right: 30px;
    width: 50px;
    z-index: 99;
    border: none;
    outline: none;
    background-color: black;
    color: white;
    cursor: pointer;
    padding: 5px;
    border-radius: 10px;
    font-size: 36px;
    opacity: 0.85;
    text-align: center;
  }
}

